k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkadash-service
  namespace: default
  labels:
    app: kafkadash
    version: v1.0.0
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: kafkadash

---
apiVersion: v1
kind: Service
metadata:
  name: kafkadash-headless
  namespace: default
  labels:
    app: kafkadash
    version: v1.0.0
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 4010
    targetPort: http
    protocol: TCP
  selector:
    app: kafkadash
